--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -13,16 +13,27 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 ===Proper noun===
 {{en-proper noun|German|ies|pl2=Germanys|-}}
 
-# Country in Central Europe. Official name: Federal Republic of Germany (Bundesrepublik Deutschland).
-# (''countable''; hist. 1949-1990) Either of the German states, FRG and GDR. ''The two Germanies exchanged permanent representatives in 1974.''
-# (''countable''; hist. pre-1871) Any of the German states. ''Melton’s useful new book traces the explosion of public institutions in eighteenth-century England, France and the Germanies.''
+# The country in Central Europe of which [[Berlin]] is the current and historical capital city. Official name: [[Federal Republic of Germany]] ([[Bundesrepublik Deutschland]]).
+# {{context|countable|historical|in reference to any period when Germany was not united}} A German state; any of several German states, such as the [[German Democratic Republic]], [[Saxony]], etc, usually excluding [[Austria]]. {{context|in the plural}} Several or all of these states, taken together.
+#* '''1987''', Henry Ashby Turner, ''The Two Germanies Since 1945'' (ISBN 0300038658)
+#* '''2007''', William Clark, ''Academic Charisma and the Origins of the Research University'' (ISBN 0226109224), page 84:
+#*: The differences between England and the '''Germanies''' sprang from the absence or presence of ministerial interventions.
+#* '''2010''', Ilan Stavans, ''Gabriel García Márquez: The Early Years'' (ISBN 0312240333):
+#*: They were also accompanied by Luis Villar Bordo, whom García Márquez had met during his student years at the Universidad Nacional de Bogotá. In a Renault 14, they drove from one '''Germany''' to the other, {{...}}
+#: ''The two '''Germanies''' exchanged permanent representatives in 1974.''
+#: ''Melton’s useful new book traces the explosion of public institutions in eighteenth-century England, France and the '''Germanies'''.''
 
 ====Quotations====
 #* '''1872''', ''History of English Literature'', an abridgment by John Fiske of H. van Laun's translation of Hippolyte Taine's '''1864''' ''Histoire de la littérature anglaise''; page 26:
 #*: While the Germans of Gaul, Italy, and Spain became Romans, the Saxons retained their language, their genius, and manners, and created in Britain a '''Germany''' outside of '''Germany'''.
 
+====Related terms===
+* [[German]]
+* [[Germanic]]
+* [[Germania]]
+
 ====Translations====
-{{trans-top|country}}
+{{trans-top|country in Central Europe which has Berlin as its capital city}}
 * Acehnese: {{tø|ace|Jeureuman}}
 * Afrikaans: {{t+|af|Duitsland}}
 * Albanian: {{t+|sq|Gjermania}}
@@ -131,8 +142,8 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 * Slovak: {{t-|sk|Nemecko|n}}
 * Slovene: {{t+|sl|Nemčija|f}}
 * Sorbian:
-*: [[Lower Sorbian]]: {{tø|dsb|Nimska|f}}, {{tø|dsb|Nimce|p}}
-*: [[Upper Sorbian]]: {{t+|hsb|Němska|f}}
+*: Lower Sorbian: {{tø|dsb|Nimska|f}}, {{tø|dsb|Nimce|p}}
+*: Upper Sorbian: {{t+|hsb|Němska|f}}
 * Spanish: {{t+|es|Alemania|f}}
 * Swahili: {{t+|sw|Ujerumani|c6}}
 * Swedish: {{t+|sv|Tyskland}}
@@ -162,41 +173,59 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 ===See also===
 * [[Appendix:Place names in Germany]]
 * {{list:countries of Europe/en}}
-{{top2}}
+{{rel-top2|Placenames which are semantically related to "Germany".}}
 * [[Alemania]]
-* [[Alsace|Alsatia]]
+* [[Alsace]], [[Alsatia]]
 * [[Austria]]
+* [[Baden-Württemberg]]
 * [[Bavaria]]
-* [[Deutsch]]
-* [[Deutschland]]
-* [[Diets]], [[Dietsch]]
-* [[Duits]]
-* [[Dutch]]
+* [[Berlin]]
+* [[Brandenburg]]
+* [[Bremen]]
 * [[East Germany]]
 * [[German Democratic Republic]]
 * [[German Empire]]
-* [[German]], [[Germanic]]
 * [[Germania]]
-* [[Goth]]
-{{mid2}}
-* [[Hun]]
+* [[Hesse]]
 * [[Liechtenstein]]
+* [[Limburg]]
+* [[Low Saxony]]
 * [[Luxembourg]]
+{{rel-mid2}}
 * [[Luxemburg]]
+* [[Mecklenburg-Vorpommern]]
 * [[Netherlands]]
+* [[North Rhine-Westphalia]]
+* [[Pomerania]]
 * [[Prussia]]
-* [[Reich]], [[Riik]], [[Rick]], [[Rich]], [[Rijk]], [[Rike]], [[Rik]], [[Rig]], [[Riche]], [[Ritch]]
-* [[Saxon]]
+* [[Reich]]
+* [[Rhineland-Palatinate]]
+* [[Saarland]]
+* [[Saxony]]
+* [[Saxony-Anhalt]]
+* [[Schleswig-Holstein]]
 * [[Silesia]]
 * [[Swabia]]
 * [[Switzerland]]
-* [[Teuton]], [[Teutonic]]
+* [[Thuringia]]
 * [[Tirol]]
-* [[Tyskland]]
-* [[Vandal]]
 * [[Weimar Republic]]
+* [[Westphalia]]
 * [[West Germany]]
-{{bottom}}
+{{rel-bottom}}
+{{rel-top2|See also}}
+* [[Deutsch]]
+* [[Diets]], [[Dietsch]]
+* [[Duits]]
+* [[Dutch]]
+* [[Goth]]
+{{rel-mid2}}
+* [[Hun]]
+* [[Saxon]]
+* [[Teuton]], [[Teutonic]]
+* [[Vandal]]
+{{rel-bottom}}
+* [[Deutschland]]
 
 ===Anagrams===
 * [[mangery#English|mangery]]
