fix header level; no need for usexes now that there are quotations <Germany#19028823>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -20,8 +20,6 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 #*: The differences between England and the '''Germanies''' sprang from the absence or presence of ministerial interventions.
 #* '''2010''', Ilan Stavans, ''Gabriel García Márquez: The Early Years'' (ISBN 0312240333):
 #*: They were also accompanied by Luis Villar Bordo, whom García Márquez had met during his student years at the Universidad Nacional de Bogotá. In a Renault 14, they drove from one '''Germany''' to the other, {{...}}
-#: ''The two '''Germanies''' exchanged permanent representatives in 1974.''
-#: ''Melton’s useful new book traces the explosion of public institutions in eighteenth-century England, France and the '''Germanies'''.''
 # {{context|countable}} A or the German state at a particular time.
 #: ''The '''Germany''' of his children was not the '''Germany''' of his forefathers.''
 #: ''One '''Germany''' faded and another emerged.''
@@ -30,7 +28,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 #* '''1872''', ''History of English Literature'', an abridgment by John Fiske of H. van Laun's translation of Hippolyte Taine's '''1864''' ''Histoire de la littérature anglaise''; page 26:
 #*: While the Germans of Gaul, Italy, and Spain became Romans, the Saxons retained their language, their genius, and manners, and created in Britain a '''Germany''' outside of '''Germany'''.
 
-====Related terms===
+====Related terms====
 * [[German]]
 * [[Germanic]]
 * [[Germania]]
