--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -35,11 +35,13 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 
 ====Translations====
 {{trans-top|country in Central Europe which has Berlin as its capital city}}
+* Abenaki: {{t|abe|Alemônki}}
 * Acehnese: {{tø|ace|Jeureuman}}
 * Afrikaans: {{t+|af|Duitsland}}
 * Albanian: {{t+|sq|Gjermania}}
 * {{trreq|am}}
 * Arabic: {{t+|ar|ألمانيا|f|tr='almaanya}}
+* Aramaic: {{t|arc|ܓܪܡܢ|tr=Jerman}}
 * {{trreq|an}}
 * Armenian: {{t+|hy|Գերմանիա|tr=Germania}}
 * Asturian: {{t+|ast|Alemaña|f}}
