/* See also */ <Germany#19029033>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -196,8 +196,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 * [[Limburg]]
 * [[Lorraine]]
 * [[Lower Saxony]]
-* [[Luxembourg]]
-* [[Luxemburg]]
+* [[Luxembourg]], [[Luxemburg]]
 * [[Mecklenburg-Vorpommern]]
 * [[Netherlands]]
 * [[North Rhine-Westphalia]]
@@ -205,8 +204,8 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 * [[Prussia]]
 * [[Reich]]
 * [[Rhineland-Palatinate]]
-{{rel-mid3}}
 * [[Saarland]]
+{{rel-mid3}}
 * [[Saxony]]
 * [[Saxony-Anhalt]]
 * [[Schleswig-Holstein]]
