--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -170,7 +170,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Võro: [[Prantsusmaa]]
 * Welsh: {{t+|cy|Ffrainc|f}}
 * West Frisian: {{t+|fy|Frankryk}}
-* Yiddish: {{t-|yi|פראנקרײך|n|alt=פֿראַנקרײַך|tr=Frankraykh, Frankrajch|sc=Hebr}}
+* Yiddish: {{t-|yi|n|פֿראַנקרײַך|tr=Frankraykh|sc=Hebr}}
 {{trans-bottom}}
 
 ===See also===
