--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -76,6 +76,14 @@ From {{etyl|gmh|en}} {{term|spalden|lang=gmh}}, or {{etyl|non|en}} {{term|spald|
 
 # {{dialect|Northern England|Scotland}} A thin piece of wood or metal; a splinter.
 
+====Verb====
+{{en-verb}}
+
+# {{obsolete}} To [[split]]; to [[break]]; to [[spalt]].
+#: {{rfquotek|Mortimer}}
+
+{{Webster 1913}}
+
 ===Anagrams===
 * [[pelts#English|pelts]], [[slept#English|slept]]
 
