--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -3,10 +3,9 @@
 
 ===Pronunciation===
 * {{a|UK}} {{enPR|chōz}}, {{IPA|/tʃəʊz/}}, {{X-SAMPA|/tS@Uz/}}
-* {{rhymes|əʊz}}
 * {{a|US}} {{enPR|chōz}}, {{IPA|/tʃoʊz/}}, {{X-SAMPA|/tSoUz/}}
-* {{audio|en-us-chose.ogg|Audio (US)}}
-* {{rhymes|oʊz}}
+* {{audio|En-us-chose.ogg|Audio (US)}}
+* {{rhymes|əʊz}}
 
 ===Verb===
 '''chose'''
@@ -27,8 +26,8 @@ From {{etyl|fro|fr}} < {{etyl|la|fr}} {{term|causa|lang=la}}. Compare Italian {{
 
 ===Pronunciation===
 * {{IPA|/ʃoz/|lang=fr}}
-* {{a|Quebec}} {{IPA|/ʃoʊz/|lang=fr}}
-* {{audio|Fr-chose.ogg|audio}}
+* {{audio|Fr-chose.ogg|audio (France)}}
+* {{a|Quebec}} {{IPA|[ʃou̯z]|lang=fr}}
 * {{rhymes|oz|lang=fr}}
 
 ===Noun===
