/* Usage notes */ <cost#19034699>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -162,7 +162,7 @@ From {{etyl|enm}} {{term|costen|lang=enm}}, from {{etyl|fro}} {{term|coster|lang
 # To [[calculate]] or [[estimate]] a value.
 
 =====Usage notes=====
-The past tense and past participle is ''cost'' in the sense of "this computer '''cost''' me £600", but ''costed'' in the sense of "the project was '''costed''' at $1 million."
+The past tense and past participle is ''cost'' in the sense of "this computer '''cost''' me £600", but ''costed'' in the sense of 'calculated', "the project was '''costed''' at $1 million."
 
 =====Derived terms=====
 * [[cost an arm and a leg]]
