t+bg:[[ленен]] t+bg:[[светложълт]] ([[WT:EDIT|Assisted]]) <flaxen#19126143>

--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -14,6 +14,7 @@
 
 ====Translations====
 {{trans-top|material}}
+* Bulgarian: {{t|bg|ленен|sc=Cyrl}}
 * Danish: {{t-|da|hørfarvet}}
 * Dutch: {{t+|nl|vlaskleurig}}
 * Japanese: [[亜麻]][[製]]の (あませいの, amasei no)
@@ -24,6 +25,7 @@
 {{trans-bottom}}
 
 {{trans-top|colour}}
+* Bulgarian: {{t|bg|светложълт|sc=Cyrl}}
 * French: {{t-|fr|de lin}}
 * French: {{t-|fr|de lin}}
 * Japanese: [[亜麻]][[色]]の (あまいろの, amairo no)
