--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -88,11 +88,13 @@ From {{etyl|fr|en}} {{term|Européen|lang=fr}}, ''[[viâ]]'' {{etyl|la|en}} {{te
 * Hungarian: [[európai]], [[européer]]
 * Interlingua: [[europeo]]
 * Irish: {{t-|ga|Eorpach|m}}
-{{trans-mid}}
 * Italian: {{t+|it|europeo|m}}, {{t+|it|europea|f}}
+{{trans-mid}}
 * Japanese: {{t-|ja|ヨーロッパ人|tr=Yōroppa-jin}},  {{t-|ja|欧州人|tr=おうしゅうじん, Ōshū-jin}}
 * Korean: {{t-|ko|유럽 사람|tr=Yureop saram|sc=Hang}}
-* Norwegian: {{t+|no|europeer|m}}
+* Norwegian: 
+*: Bokmål: {{t+|no|europeer|m}}
+*: Nynorsk: {{t+|nn|europear|m}}
 * Polish: {{t+|pl|Europejczyk|m}}, {{t+|pl|Europejka|f}}
 * Portuguese: {{t+|pt|europeu|m}}, {{t+|pt|europeia|f}}
 * Romanian: [[european]] {{m}}, [[europeană]] {{f}}
