--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -26,39 +26,41 @@ From {{etyl|fr|en}} {{term|Européen|lang=fr}}, ''[[viâ]]'' {{etyl|la|en}} {{te
 
 ====Translations====
 {{trans-top|related to Europe or the European Union}}
-* Arabic: {{t-|ar|أوروبي|tr='uruubiy}}
-* Armenian: {{t-|hy|եվրոպական|tr=evropakan}}
-* Catalan: [[europeu]] {{m}}, [[europea]] {{f}}
+* Arabic: {{t-|ar|أوروبي|tr='uruubiy|sc=Arab}}
+* Armenian: {{t-|hy|եվրոպական|tr=evropakan|sc=Armn}}
+* Catalan: {{t|ca|europeu|m}}, {{t|ca|europea|f}}
 * Chinese:
 *: Mandarin: {{t-|cmn|歐洲|alt=歐洲的|sc=Hani}},  {{t-|cmn|欧洲|alt=欧洲的|tr=Ōuzhōu-de|sc=Hani}}
 * Czech: {{t+|cs|evropský|m}}
 * Danish: {{t-|da|europæisk}}
 * Dutch: {{t+|nl|Europees}}
-* Esperanto: [[eŭropa]]
-* Estonian: [[euroopa]]
+* Esperanto: {{t|eo|eŭropa}}
+* Estonian: {{t|et|euroopa}}
 * Finnish: {{t+|fi|eurooppalainen}}
 * French: {{t+|fr|européen|m}}, {{t+|fr|européenne|f}}
 * German: {{t+|de|europäisch}}
 * Greek: {{t+|el|ευρωπαϊκός|m|tr=evropaïkós|sc=Grek}}
 * Hungarian: {{t+|hu|európai}}
-* Interlingua: [[europee]]
+* Interlingua: {{t|ia|europee}}
 * Irish: {{t-|ga|Eorpach}}, {{t-|ga|Eorpa|alt=na hEorpa}}
 {{trans-mid}}
 * Italian: {{t+|it|europeo|m}}, {{t+|it|europea|f}}
-* Japanese: [[ヨーロッパ]]の (Yōroppa no), [[欧州]]の (Ōshū no)
-* Maltese: [[ewropew]] {{m}}, [[ewropea]] {{f}}
+* Japanese: {{t|ja|ヨーロッパ|alt=ヨーロッパの|tr=Yōroppa no}}, {{t|ja|欧州|alt=欧州の|tr=Ōshū no}}
+* Maltese: {{t|mt|ewropew|m}}, {{t|mt|ewropea|f}}
 * Polish: {{t+|pl|europejski|m}}, {{t-|pl|europejska|f}}
 * Portuguese: {{t+|pt|europeu|m}}, {{t+|pt|europeia|f}}
 * Romanian: {{t-|ro|european}}
 * Romansch: {{t-|rm|europeic|m}}, {{t-|rm|europeica|f}}
-* Russian: {{t+|ru|европейский|tr=jevropéjskij}}
-* Serbo-Croatian: {{t-|sh|europski|alt=èuropskī}}
+* Russian: {{t+|ru|европейский|tr=jevropéjskij|sc=Cyrl}}
+* Serbo-Croatian:
+*: Cyrillic: {{t-|sh|еуропски|alt=ѐуропскӣ|sc=Cyrl}}
+*: Latin: {{t-|sh|europski|alt=èuropskī}}
 * Spanish: {{t+|es|europeo}}
 * Swedish: {{t+|sv|europeisk}}
 * Turkish: {{t+|tr|Avrupalı}}
-* Ukrainian: {{t+|uk|європейський|tr=jevropéjs'kyj}}
-* Welsh: [[Ewropeaidd]]
-* West Frisian: [[Europeesk]]
+* Ukrainian: {{t+|uk|європейський|tr=jevropéjs'kyj|sc=Cyrl}}
+* Welsh: {{t|cy|Ewropeaidd}}
+* West Frisian: {{t|fy|Europeesk}}
 * Yiddish: {{t-|yi|אייראָפּעיש|tr=eyropeyish|sc=Hebr}}
 {{trans-bottom}}
 
@@ -70,9 +72,9 @@ From {{etyl|fr|en}} {{term|Européen|lang=fr}}, ''[[viâ]]'' {{etyl|la|en}} {{te
 
 ====Translations====
 {{trans-top|person}}
-* Arabic: {{t-|ar|أوروبي|m|tr='uruubiy}},  {{t-|ar|أوروبية|f|tr='urubíyya}}
-* Armenian: {{t-|hy|եվրոպացի|tr=evropac'i}}
-* Catalan: [[europeu]] {{m}} [[europea]] {{f}}
+* Arabic: {{t-|ar|أوروبي|m|tr='uruubiy|sc=Arab}},  {{t-|ar|أوروبية|f|tr='urubíyya|sc=Arab}}
+* Armenian: {{t-|hy|եվրոպացի|tr=evropac'i|sc=Armn}}
+* Catalan: {{t|ca|europeu|m}}, {{t|ca|europea|f}}
 * Chinese:
 *: Mandarin: {{t|cmn|歐洲人|sc=Hani}},  {{t|cmn|欧洲人|tr=Ōuzhōu-rén|sc=Hani}}
 * Czech: {{t+|cs|Evropan|m}}
@@ -84,28 +86,28 @@ From {{etyl|fr|en}} {{term|Européen|lang=fr}}, ''[[viâ]]'' {{etyl|la|en}} {{te
 * French: {{t+|fr|Européen|m}}, {{t+|fr|Européenne|f}}
 * German: {{t+|de|Europäer|m}}, {{t+|de|Europäerin|f}}
 * Greek: {{t+|el|Ευρωπαίος|m|tr=Evropaíos|sc=Grek}}, {{t+|el|Ευρωπαία|f|tr=Evropaía|sc=Grek}}
-* Hindi: {{t-|hi|युरोपियन|tr=yuropiyan}}
-* Hungarian: [[európai]], [[européer]]
-* Interlingua: [[europeo]]
+* Hindi: {{t-|hi|युरोपियन|tr=yuropiyan|sc=Deva}}
+* Hungarian: {{t|hu|európai}}, {{t|hu|européer}}
+* Interlingua: {{t|ia|europeo}}
 * Irish: {{t-|ga|Eorpach|m}}
 * Italian: {{t+|it|europeo|m}}, {{t+|it|europea|f}}
 {{trans-mid}}
 * Japanese: {{t-|ja|ヨーロッパ人|tr=Yōroppa-jin}},  {{t-|ja|欧州人|tr=おうしゅうじん, Ōshū-jin}}
 * Korean: {{t-|ko|유럽 사람|tr=Yureop saram|sc=Hang}}
 * Norwegian: 
-*: Bokmål: {{t+|no|europeer|m}}
+*: Bokmål: {{t+|nb|europeer|m}}
 *: Nynorsk: {{t+|nn|europear|m}}
 * Polish: {{t+|pl|Europejczyk|m}}, {{t+|pl|Europejka|f}}
 * Portuguese: {{t+|pt|europeu|m}}, {{t+|pt|europeia|f}}
-* Romanian: [[european]] {{m}}, [[europeană]] {{f}}
-* Russian: {{t+|ru|европеец|m|tr=jevropéjec}},  {{t+|ru|европейка|f|tr=jevropéjka}}
+* Romanian: {{t|ro|european|m}}, {{t|ro|europeană|f}}
+* Russian: {{t+|ru|европеец|m|tr=jevropéjec|sc=Cyrl}}, {{t+|ru|европейка|f|tr=jevropéjka|sc=Cyrl}}
 * Serbo-Croatian: {{t-|sh|Europljanin|m|alt=Európljanin}}, {{t-|sh|Europljanka|f|alt=Európljānka}}, {{t-|sh|Europejac|m|alt=Européjac}}
 * Spanish: {{t+|es|europeo}}
 * Swedish: {{t+|sv|europé|c}}
 * Turkish: {{t+|tr|Avrupalı}}
 * Vietnamese: {{t-|vi|người Châu Âu}}
-* Welsh: [[Ewropead]]
-* West Frisian: [[Europeaan]]
+* Welsh: {{t|cy|Ewropead}}
+* West Frisian: {{t|fy|Europeaan}}
 * Yiddish: {{t-|yi|אייראָפּעער|m|tr=eyropeyer|sc=Hebr}}, {{t-|yi|אייראָפּעערין|f|tr=eyropeyerin|sc=Hebr}}
 {{trans-bottom}}
 
