--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -159,7 +159,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Hungarian: {{t+|hu|számol}}
 * Icelandic: {{t+|is|telja}}
 * Ido: {{t+|io|kontar}}
-* Indonesian: {{t+|id|menghitung}}
+* Indonesian: {{t+|id|menghitung}}, {{t|id|hitung}}
 * Italian: {{t+|it|contare}}
 {{trans-mid}}
 * Japanese: {{t+|ja|数える|tr=かぞえる, kazoeru|sc=Jpan}}
