t+no:[[landskilpadde]] ([[WT:EDIT|Assisted]]) <tortoise#19165929>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -70,7 +70,7 @@
 * Maori: {{t-|mi|honuwhenua}}
 * Nahuatl: {{t-|nah|āyotl}}
 * Navajo: {{tø|nv|chʼééh digháhii}}
-* Norwegian: {{t+|no|skilpadde}}, {{t+|no|skjelpadde}}
+* Norwegian: {{t+|no|skilpadde}}, {{t+|no|skjelpadde}}, {{t|no|landskilpadde|f}}
 * Pali: {{t-|pi|kacchapa|m}}
 * Persian: {{qualifier|tortoise or turtle}} {{t+|fa|لاک‌پشت|tr=lâk-pošt|sc=fa-Arab}}
 * Polish: {{qualifier|tortoise or turtle}} {{t+|pl|żółw|m}}, {{t-|pl|żółw lądowy|m}}
