--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -55,7 +55,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * {{sense|to succeed in finding a person with whom to have sex.}} [[score]]
 
 ====Antonyms====
-* {{sense|apply force to (something) so it comes towards one}} [[push]], [[repel]], [[shove]]
+* {{sense|apply force to (something) so it moves away from one}} [[push]], [[repel]], [[shove]]
 
 ====Derived terms====
 ''See also'' '''[[pulling]]'''<!--as "pulling power"-->
