t+or:[[ଇଟା]] ([[WT:EDIT|Assisted]]) <brick#19188377>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -113,7 +113,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 *: Nynorsk: {{t-|nn|murstein|m}}
 * {{trreq|Novial}}
 * Occitan: {{t-|oc|brica|f}}
-* {{trreq|Oriya}}
+* Oriya: {{t|or|ଇଟା|sc=Orya}}
 * {{trreq|Pashto}}
 * Persian: {{t+|fa|آجر|tr=âjor|sc=fa-Arab}}
 * Polish: {{t+|pl|cegła}}
