--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -423,7 +423,7 @@ From {{etyl|enm}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|ple
 {{rel-bottom}}
 
 ===Etymology 2===
-From {{etyl|enm}} {{term|pleye|lang=enm}}, from {{etyl|ang}} {{term|plæg|plæġ|lang=ang}}, {{term|plega|pleġa|lang=ang}}, {{term|plæga|plæġa|play, quick motion, movement, exercise; (athletic) sport, game; festivity, drama, game, sport; battle; gear for games, an implement for a game; clapping with the hands, applause|lang=ang}}, deverbative of {{term|plegian|pleġian|to play|lang=ang}}; see above.
+From {{etyl|enm}} {{term|pleye|lang=enm}}, from {{etyl|ang}} {{term|plæg|plæġ|lang=ang}}, {{term|plega|pleġa|lang=ang}}, {{term|plæga|plæġa|play, quick motion, movement, exercise; (athletic) sport, game; festivity, drama; battle; gear for games, an implement for a game; clapping with the hands, applause|lang=ang}}, deverbative of {{term|plegian|pleġian|to play|lang=ang}}; see above.
 
 ====Noun====
 {{en-noun|s|-}}
