--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -78,7 +78,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 * German: {{t+|de|Deutschland|n}}
 *: Middle High German: [[Tiutschlant]] {{n}}
 * Greek: {{t+|el|Γερμανία|f|tr=Germanía}}
-* {{trreq|gu}}
+* Gujarati: {{t|gu|જર્મની|tr=jarmanī|sc=Gujr}}
 * Hawaiian: {{tø|haw|Kelemānia}}
 * Hebrew: {{t-|he|גרמניה|f|tr=Germania}}
 * Hindi: {{t+|hi|जर्मनी|m|tr=jarmanī}}
