--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 {{wikipedia}}
-
+[[Image:Faldilla-frunzida.jpg|thumb|A skirt]]
 ===Etymology===
 From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{recons|skurtijōn|lang=gem-pro}}. Compare {{term|lang=en|shirt}}.
 
