--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -176,6 +176,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 {{trans-top|to have a conversation}}
 * Finnish: {{t+|fi|puhua}}, {{t+|fi|keskustella}}, {{t+|fi|jutella}}
 {{trans-mid}}
+* Swedish: {{t|sv|konversera}}
 {{trans-bottom}}
 
 {{trans-top|to communicate or converse by some means other than orally}}
