--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -182,6 +182,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 {{trans-top|to communicate or converse by some means other than orally}}
 * Finnish: {{t+|fi|puhua}}, {{t+|fi|kertoa}}
 {{trans-mid}}
+* Swedish: {{t|sv|kommunicera}}
 {{trans-bottom}}
 
 {{trans-top|to deliver a speech}}
