t+sv:[[tala]] ([[WT:EDIT|Assisted]]) <speak#19303323>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -188,6 +188,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 {{trans-top|to deliver a speech}}
 * Finnish: {{t+|fi|puhua}}, {{t-|fi|pitää puhe}}
 {{trans-mid}}
+* Swedish: {{t|sv|tala}}
 {{trans-bottom}}
 
 {{trans-top|to be able to communicate in a language}}
