--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -93,6 +93,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 * Ido: {{t+|io|sentar}}
 * Italian: {{t+|it|sentire}}
 * Japanese: {{t+|ja|触れる|tr=ふれる, fureru}}
+* Latvian: {{t|lv|taustīt}}
 * Norwegian: {{t+|no|føle}}, {{t+|no|kjenne}}
 * Occitan:
 * Old Church Slavonic: {{tø|cu|чѹти|tr=čuti|sc=Cyrs}}
@@ -168,6 +169,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 * Bulgarian: {{t+|bg|опипвам|sc=Cyrl}}
 {{trans-mid}}
 * Finnish: {{t+|fi|tunnustella}}
+* Latvian: {{t|lv|taustīt}}
 * Norwegian: {{t+|no|kjenne|alt=kjenne etter}}, {{t+|no|føle}}
 {{trans-bottom}}
 
