--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -343,7 +343,7 @@
 * Hungarian: {{t+|hu|sor}}
 * Irish: {{t-|ga|sraith|f}}
 * Japanese: {{t-|ja|ストレート|tr=sutorēto}}
-* Polish: {{t-|pl|strit|m}}
+* Polish: {{t+|pl|strit|m}}
 * Russian: [[стрейт]] (strejt) {{m}}, [[стрит]] (strit) {{m}}
 * Swedish: {{t+|sv|stege|c}}
 {{trans-bottom}}
