--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -94,7 +94,7 @@ From {{etyl|nl}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settlemen
 *: Roman: {{t-|sh|Novi Zeland|m|alt=Nȍvī Zèland}}
 * Sinhalese: {{t-|si|නවසීලන්‍තය|tr=navasīlantaya|sc=Sinh}}
 * Slovak: {{t-|sk|Nový Zéland|m}}
-* Slovene: {{t+|sl|Nova Zelandija|f}}
+* Slovene: {{t+|sl|Nova Zelandija|alt=Nôva Zelándija|f}}
 * Spanish: {{t+|es|Nueva Zelanda|f}}, {{t+|es|Nueva Zelandia|f}}
 * Swahili: {{t+|sw|Nyuzilandi}}
 * Swedish: {{t+|sv|Nya Zeeland}}
