--- a/en/坺/坺.13053.wikitext
+++ b/en/坺/坺.13053.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[paat6]], [[pet6]]|y=paat6, pet6}}
+
+# {{defn|lang=yue|sort=土05}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
