--- a/en/偋/偋.11099.wikitext
+++ b/en/偋/偋.11099.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[bing2]]|y=bing2}}
+
+# {{defn|lang=yue|sort=人09}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
