--- a/en/坡/坡.13028.wikitext
+++ b/en/坡/坡.13028.wikitext
@@ -14,7 +14,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=bo1, po1}}
+{{yue-hanzi|jyut=[[bo1]], [[po1]]|y=bo1, po1}}
 
 # {{defn|lang=yue|sort=土05}}
 
