--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -13,7 +13,7 @@
 {{en-adj|more}}
 
 # Attractive and possessing [[charm]].
-#: ''Pammie Grant inside and out she is '''beautiful'''.''
+#: ''Anyone who has ever met her thought she was absolutely '''beautiful'''.''
 #: ''There's a '''beautiful''' lake by the town.''
 # {{context|of the weather}} pleasant; clear.
 #: ''It's '''beautiful''' outside, let's go for a walk.''
