/* Translations */ <Czech Republic#19379230>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -76,7 +76,7 @@
 * Sicilian: {{t-|scn|Ripùbblica Ceca|f}}
 * Silesian: {{tø|szl|Czesko Republika|f}}, (''colloquial'') {{tø|szl|Czechy|p}}
 * Slovak: {{t-|sk|Česká republika|f}}, {{t-|sk|Česko|n}}
-* Slovene: {{t-|sl|Češka Republika|f}}, {{t+|sl|Češka|f}}
+* Slovene: {{t-|sl|Češka Republika|alt=Čéška Repúblika|f}}, {{t+|sl|Češka|alt=Čéška|f}}
 * Spanish: {{t+|es|República Checa|f}}
 * Swahili: {{t-|sw|Jamhuri ya Ucheki}}
 * Swedish: {{t+|sv|Tjeckien}}, {{t-|sv|Republiken Tjeckien}}
