--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -99,6 +99,7 @@ First attested in {{etyl|enm}}, probably from {{etyl|gd}} {{term|stob||to prick,
 * Burmese: {{t+|my|ထိုး|tr=hto:|sc=Mymr}}
 * Catalan: {{t+|ca|apunyalar}}, {{t+|ca|acoltellar}}
 * Chinese:
+*: Cantonese: {{tø|yue|插|tr=chaap3|sc=Hani}}
 *: Mandarin: {{t|cmn|朿|tr=cì}}
 * Czech: {{t-|cs|pobodat}}
 * Dutch: {{t+|nl|steken}}
