t+vi:[[tủy xương]] ([[WT:EDIT|Assisted]]) <bone marrow#19387821>

--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -36,6 +36,7 @@
 * Spanish: {{t+|es|meollo|m}},  {{t+|es|tuétano|m}},  {{t+|es|médula|f}}
 * Swedish: {{t+|sv|benmärg|c}}
 * Turkish: {{t-|tr|kemik iliği}}
+* Vietnamese: {{t|vi|tủy xương}}
 * [[Volapük]]: {{t+|vo|pif}}
 {{trans-bottom}}
 
