t+gn:[[karaku]] ([[WT:EDIT|Assisted]]) <bone marrow#19387839>

--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -21,6 +21,7 @@
 * Finnish: {{t+|fi|luuydin}}
 * French: {{t+|fr|moelle osseuse|f}},  {{t+|fr|moelle|f}}
 * German: {{t-|de|Knochenmark|n}}
+* Guaraní: {{t|gn|karaku}}
 * Hungarian: {{t+|hu|csontvelő}}
 * Icelandic: {{t+|is|beinmergur|m}}
 {{trans-mid}}
