t+roa-jer:[[couôter]] t-balance ([[WT:EDIT|Assisted]]) <cost#19392708>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -188,10 +188,11 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * German: {{t+|de|kosten}}
 * Greek: [[κοστίζω]] [ko̞ˈstizo̞] (means also "to cause damage or distress"), [[στοιχίζω]] [stiˈçizo̞] (means also "to inflict" and "to align"), [[τιμώμαι]] [tiˈmo̞me̞], [[κάνω]] [ˈkano̞] [colloquial (has a huge number of meanings, one of them is "to cost")]
 * Indonesian: [[habis|menghabiskan]] biaya
-{{trans-mid}}
 * Interlingua: {{t-|ia|costar}}
 * Italian: {{t+|it|costare}}
+{{trans-mid}}
 * Japanese: {{t-|ja|費やす|tr=[[ついやす]], tsuiyasu}}, {{t-|ja|掛かる|tr=kakaru}}
+* Jèrriais: {{tø|roa-jer|couôter}}
 * Kannada: {{t+|kn|ಬೀರು|tr=bīru|sc=Knda}}
 * {{trreq|Korean}}
 * Latin: {{t+|la|consto}}, {{t+|la|valeo}}
