t+roa-jer:[[chouaîsi]] t-balance ([[WT:EDIT|Assisted]]) <choose#19395789>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -116,6 +116,7 @@ From {{etyl|enm}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{ety
 * Ilocano: {{tø|ilo|pili}}
 * Italian: {{t+|it|scegliere}}, {{t+|it|selezionare}}
 * Japanese: {{t-|ja|選ぶ|tr=えらぶ, erabu}}
+* Jèrriais: {{tø|roa-jer|chouaîsi}}
 {{trans-mid}}
 * Korean: {{t+|ko|고르다|tr=goreuda|sc=Hang}}
 * Latin: {{t+|la|lego}}
