--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -57,7 +57,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Hungarian: {{t+|hu|függöny}}
 * Icelandic: {{t+|is|gluggatjald|n}}, {{t-|is|gardína|f}}
 * Ido: {{t+|io|kurteno}}
-* {{trreq|ga}}
+* Irish: {{t|ga|cuirtín|m}}
 * Italian: {{t+|it|tenda|f}}, {{t-|it|tappezzeria|f}}, {{t-|it|drappo|m}}
 * Japanese: {{t+|ja|カーテン|tr=kāten}}
 * Khmer: {{t+|km|វាំងនន|tr=veang nɔɔ nɔɔ|sc=Khmr}}
@@ -117,10 +117,11 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * German: {{t+|de|Vorhang|m}}
 * Greek: {{t+|el|αυλαία|f}}
 * Icelandic: {{t-|is|leikhústjald|n}}, {{t+|is|tjald|n}}
+* Irish: {{t|ga|brat|m}}
 * Italian: {{t-|it|sipario|m}}
 * Japanese: [[幕]] ([[まく]], maku), [[緞帳]] ([[どんちょう]], donchō) with vertical move, [[引き幕]]　([[ひきまく]] hikimaku) with horizontal move
-* Macedonian: {{t-|mk|кулиса|f|tr=kulísa}}
 {{trans-mid}}
+* Macedonian: {{t-|mk|кулиса|f|tr=kulísa}}
 * Persian: {{t+|fa|پرده|tr=parde}}
 * Polish: {{t+|pl|kurtyna|f}}
 * Portuguese: {{t+|pt|cortina|f}}
