substantive should remain, understand is a very distance probable cognate so I support its removal <substance#19418411>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -23,6 +23,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 ====Related terms====
 * [[subsist]]
 * [[substantial]]
+* [[substantive]]
 
 ====Translations====
 {{trans-top|matter}}
