--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -100,8 +100,8 @@
 * Korean: {{t+|ko|빨다|tr=ppalda}}
 * Kurdish: {{t+|ku|mêjîn}}, {{t+|ku|mêtin}}, {{ku-Arab|[[مژین]]}}
 * Latin: {{t+|la|sugo}}
-{{trans-mid}}
 * Latvian: {{t+|lv|sūkt}}
+{{trans-mid}}
 * Lithuanian: {{t-|lt|čiulpti|alt=čiul̃pti}}
 * Macedonian: {{t-|mk|цица|tr=cíca}}
 * Malay: {{t-|ms|hisap}}, {{t-|ms|sedut}}
@@ -109,6 +109,7 @@
 * Persian: {{t+|fa|مکیدن|tr=makidan}}
 * Polish: {{t+|pl|ssać}}
 * Portuguese: {{t+|pt|chupar}}, {{t+|pt|sugar}}
+* Quechua: {{t|qu|ch'unqay}}
 * Rapa Nui: {{tø|rap|omo}}
 * Romanian: {{t+|ro|suge}}
 * Romansch: {{t-|rm|tschitschar}}
