--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -10,7 +10,7 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 ===Noun===
 {{en-noun|s|-}}
 
-# The saffron crocus plant, ''[[Crocus sativus]]''.
+# The saffron crocus plant, {{taxlink|Crocus sativus|species}}.
 # A [[seasoning]] made from the [[stigma]] of the saffron plant.
 # A [[dye]] made from the [[stigma]] of the saffron plant.
 # An [[orange]]-[[yellow]] [[color|colour]]. The color of a lion.
