--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -38,7 +38,7 @@ Alternate etymology connects {{etyl|frk|-}} {{recons|blund|lang=frk}} to {{etyl|
 * Esperanto: {{qualifier|♂♀}} {{t-|eo|blondulo}}, {{qualifier|♂}} {{t-|eo|virblondulo}}, {{qualifier|♀}} {{t-|eo|blondulino}}
 * Finnish: {{t+|fi|vaaleaverikkö}}
 * French: {{t+|fr|blond|m}}
-* German: {{t-|de|Blonder|m}}, {{t+|de|Blondin|m}} {{qualifier|obsolete, cf. [[fr]]: {{t+|fr|blondin}}}}, {{t+|de|Blonde|f}}, {{t+|de|Blondine|f}}, {{t-|de|Blondhaariger|m}}, {{t-|de|Blondhaarige|f}}, {{t-|de|Flachshaariger|m}}, {{t-|de|Flachshaarige|f}}, {{qualifier|♂♀}} {{t-|de|Blondkopf|m}}, {{qualifier|♂♀}} {{t-|de|Blondschopf|m}}
+* German: {{t-|de|Blonder|m}}, {{t+|de|Blondin|m}} {{qualifier|obsolete}}, {{t+|de|Blonde|f}}, {{t+|de|Blondine|f}}, {{t-|de|Blondhaariger|m}}, {{t-|de|Blondhaarige|f}}, {{t-|de|Flachshaariger|m}}, {{t-|de|Flachshaarige|f}}, {{qualifier|♂♀}} {{t-|de|Blondkopf|m}}, {{qualifier|♂♀}} {{t-|de|Blondschopf|m}}
 * Hebrew: {{t-|he|בלונדיני|m|alt=בְּלוֹנְדִּינִי|tr=blondíni|sc=Hebr}}, {{t-|he|בלונדינית|f|alt=בְּלוֹנְדִּינִית|tr=blondínit|sc=Hebr}}
 * Hindi: {{t-|hi|सुनहरे बालोंवाला|sc=Deva}}
 * Hungarian: {{t+|hu|szőke}}
