t+roa-jer:[[fliotter]] t-balance ([[WT:EDIT|Assisted]]) <float#19439028>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -192,6 +192,7 @@ From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to
 * Italian: {{t+|it|galleggiare}}
 * Japanese: {{t-|ja|浮かぶ|tr=ukabu}}, {{t-|ja|浮く|tr=uku}}, {{t-|ja|漂う|tr=tadayou}}
 {{trans-mid}}
+* Jèrriais: {{tø|roa-jer|fliotter}}
 * Khmer: {{t-|km|អន្ដែត|tr=on-dait}}
 * Latin: {{t-|la|fluctuo}}
 * Lithuanian: {{t-|lt|plūduriuoti}} {{impf}}; {{t+|lt|plaukti}} {{impf}}
@@ -211,9 +212,10 @@ From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to
 * Finnish: {{t+|fi|kellua}}, {{t+|fi|pysyä}} {{t+|fi|pinta|alt=pinnalla}}
 * French: {{t+|fr|flotter}}
 * German: {{t-|de|schwimmbar}}
-{{trans-mid}}
 * Hungarian: {{t+|hu|lebeg}}, {{t+|hu|úszik}}
+{{trans-mid}}
 * Japanese: {{t-|ja|浮かぶ|tr=ukabu}}, {{t-|ja|浮く|tr=uku}}
+* Jèrriais: {{tø|roa-jer|fliotter}}
 * Lithuanian: {{t-|lt|plūduriuoti}} {{impf}}; {{t+|lt|plaukti}} {{impf}}
 * Russian: {{t-|ru|держаться на воде|tr=d'eržát’s’a na vod’é}}
 * Spanish: {{t+|es|flotar}}
@@ -225,6 +227,7 @@ From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to
 * German: {{t+|de|gleiten}}, {{t+|de|schweben}}
 * Hungarian: {{t+|hu|lebeg}}
 * Japanese: {{t+|ja|飛ぶ|tr=tobu}}, {{t-|ja|浮遊する|tr=fuyūsuru}}, {{t-|ja|浮く|tr=uku}}
+* Jèrriais: {{tø|roa-jer|fliotter}}
 {{trans-mid}}
 * Malay:
 *: Rumi: {{t-|ms|ambang}}
@@ -239,6 +242,7 @@ From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to
 * French: {{t+|fr|flotter}}
 * German: {{t+|de|treiben}}
 {{trans-mid}}
+* Jèrriais: {{tø|roa-jer|fliotter}}
 * Lithuanian: {{t+|lt|plaukti}} {{impf}}
 * Russian: {{t+|ru|плыть|tr=plyt’}} {{impf}}, {{t+|ru|дрейфовать|tr=dr’ejfovát’}} {{impf}} {{qualifier|of a ship}}
 * Spanish: {{t+|es|flotar}}
@@ -248,8 +252,9 @@ From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to
 * Dutch: {{t+|nl|vloeien}}
 * Finnish: {{t+|fi|lipua}}, {{t+|fi|leijua}}
 * French: {{t+|fr|flotter}}
-{{trans-mid}}
 * German: {{t+|de|gleiten}}, {{t+|de|schweben}}
+{{trans-mid}}
+* Jèrriais: {{tø|roa-jer|fliotter}}
 * Lithuanian: {{t-|lt|tekėti}} {{impf}}
 * Spanish: {{t+|es|flotar}}
 {{trans-bottom}}
@@ -264,6 +269,7 @@ From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to
 * French: {{t+|fr|flotter}}
 {{trans-mid}}
 * Japanese: {{t-|ja|超える|tr=koeru}}
+* Jèrriais: {{tø|roa-jer|fliotter}}
 {{trans-bottom}}
 
 {{trans-top|propose for consideration}}
