--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -45,6 +45,7 @@ From {{etyl|enm}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|
 * Georgian: {{t-|ka|პალტო|sc=Geor}}, {{t-|ka|ქურქი|sc=Geor}}, {{t-|ka|პიჯაკი|sc=Geor}}, {{t-|ka|ქურთუკი|sc=Geor}}
 * German: {{t+|de|Mantel|m}}
 * Greek: {{t+|el|πανωφόρι|n|tr=panofóri}}, {{t+|el|παλτό|n|tr=paltó}}
+* Hebrew: {{t|he|מעיל|tr=m'íl|alt=מְעִיל|sc=Hebr}}
 * Hungarian: {{t+|hu|kabát}}
 * Icelandic: {{t+|is|jakki|m}}, {{t-|is|frakki|m}}
 * Indonesian: {{t+|id|mantel}}
