--- a/en/傍/傍.11165.wikitext
+++ b/en/傍/傍.11165.wikitext
@@ -13,7 +13,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=bong6, pong6}}
+{{yue-hanzi|jyut=[[bong6]], [[pong4]], [[pong6]]|y=bong6, pong4, pong6}}
 
 # {{defn|lang=yue|sort=人10}}
 
