--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -316,7 +316,7 @@ From {{etyl|en|fr}} {{term|brig|lang=en}}.
 ==Scots==
 
 ===Etymology===
-{{etyl|ang|sco}} {{term|brecan|lang=ang}}, from {{etyl|gem-pro|sco}} {{recons|brekanan|lang=gem-pro}}.
+From {{etyl|ang|sco}} {{term|brecan|lang=ang}}, from {{etyl|gem-pro|sco}} {{recons|brekanan|lang=gem-pro}}.
 
 ===Verb===
 {{head|sco|verb}}
