--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -304,11 +304,11 @@ From {{etyl|en|fr}} {{term|brig|lang=en}}.
 ==Manx==
 
 ===Noun===
-{{gv-noun-form|g=m|g2=p}}
+{{head|gv|plural|g=m|g2=p}}
 
 # {{plural of|breck|lang=gv}}
 
-====Mutation====
+===Mutation===
 {{gv mut cons|b|rick}}
 
 ----
