--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -89,7 +89,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Hindi: {{t-|hi|फ़्रांस|tr=frāns}}, {{t-|hi|फ़्राँस|tr=frāns}}, {{t+|hi|फ़्रान्स|m|tr=frāns|sc=Deva}}, {{t+|hi|फ्रांस|tr=phrāns|sc=Deva}}
 * Hungarian: {{t+|hu|Franciaország}}
 * Icelandic: {{t+|is|Frakkland|n}}
-* Ido: [[Francia]]
+* Ido: {{t|io|Francia}}
 * Indonesian: {{t+|id|Perancis}}, {{t+|id|Prancis}}
 * Interlingua: {{t-|ia|Francia}}
 * Irish: {{t+|ga|Frainc|alt=an Fhrainc|f}}
@@ -106,7 +106,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Kurdish:
 *: Sorani: {{t-|ku|فه‌ره‌نسا|sc=ku-Arab}}
 {{trans-mid}}
-* Lao: {{t-|lo|ປະເທດຝະລັ່ງ|sc=Laoo}}
+* Lao: {{t-|lo|ປະເທດຝະລັ່ງ|tr=|sc=Laoo}}
 * Latin: {{t+|la|Gallia|f}}, {{t+|la|Francia}}
 * Latvian: {{t+|lv|Francija|f}}
 * Limburgish: {{t+|li|Frankriek}}
@@ -118,9 +118,9 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Luo: {{tø|luo|Frans}}
 * Luxembourgish: {{t+|lb|Frankräich|n}}
 * Macedonian: {{t+|mk|Франција|f|tr=Fráncija}}
-* Malagasy: [[Frantsa]]
+* Malagasy: {{t|mg|Frantsa}}
 * Malay: {{t-|ms|Perancis}}
-* Malayalam: {{t-|ml|ഫ്രാൻസ്|sc=Mlym}}
+* Malayalam: {{t-|ml|ഫ്രാൻസ്|tr=phrāns|sc=Mlym}}
 * Maltese: {{t+|mt|Franza}}
 * Marathi: {{t-|mr|फ्रांस|tr=phrāns|sc=Deva}}
 * Meru: {{tø|mer|Frans}}
@@ -148,7 +148,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 *: Cyrillic: {{t-|sh|Француска|f|sc=Cyrl}}
 *: Roman: {{t-|sh|Francuska|f}}
 * Sicilian: {{t-|scn|Francia|f}}
-* {{trreq|Sikkimese}}
+* {{trreq|sip}}
 * Silesian: {{tø|szl|Francyjo|f}}
 * Sinhalese: {{t-|si|ප්‍රංශය|tr=praṁśaya|sc=Sinh}}
 * Slovak: {{t-|sk|Francúzsko|n}}
@@ -160,14 +160,14 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Tagalog: {{t-|tl|Pransya}}
 * Tajik: {{t+|tg|Фаронса|tr=Faronsa|sc=Cyrl}}
 * Tamil: {{t-|ta|பிரான்ஸ்|tr=pirāns}}
-* Telugu: {{t+|te|ఫ్రాన్స్|sc=Telu}}
+* Telugu: {{t+|te|ఫ్రాన్స్|tr=phrāns|sc=Telu}}
 * Thai: {{t+|th|ฝรั่งเศส|tr=fàràngsèt}}
 * Tok Pisin: {{t-|tpi|Pranis}}
 * Turkish: {{t+|tr|Fransa}}
 * Turkmen: {{t-|tk|Fransiýa}}
 * Ukrainian: {{t+|uk|Франція|f|tr=Fráncija}}
 * Urdu: {{t-|ur|فرانس|tr=frāns}}
-* {{trreq|Uyghur}}
+* {{trreq|ug}}
 * Vietnamese: {{t+|vi|Pháp}}, {{t-|vi|nước Pháp}}
 * Volapük: {{t+|vo|Fransän}}, {{qualifier|obsolete}} {{t-|vo|Flent}}, {{qualifier|obsolete}} {{t-|vo|Flentän}}
 * Võro: [[Prantsusmaa]]
