t+rm:[[sumbrival]] t+rm:[[umbrival]] t+rm:[[tenda]] t+rm:[[curtgina]] ([[WT:EDIT|Assisted]]) <curtain#19459277>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -79,7 +79,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Polish: {{t+|pl|zasłona|f}}
 * Portuguese: {{t+|pt|cortina|f}}
 * Romanian: {{t-|ro|perdea|f}}, {{t-|ro|draperie|f}}, [[perdele]] {{f|p}}
-* {{trreq|rm}}
+* Romansch: {{t|rm|sumbrival|m}} {{qualifier|Rumantsch Grischun}}, {{t|rm|umbrival|m}} {{qualifier|Sursilvan}}, {{t|rm|tenda|f}} {{qualifier|Rumantsch Grischun, Sutsilvan, Surmiran, Puter, Vallader}}, {{t|rm|curtgina|f}} {{qualifier|Sursilvan}}
 * Russian: {{t+|ru|штора|f|tr=štóra}}, {{t+|ru|занавеска|f|tr=zanavéska}}, {{t+|ru|гардина|f|tr=gardína|sc=Cyrl}}
 * Scottish Gaelic: {{t-|gd|cùirtear|m}}
 * Serbo-Croatian:
