Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]); added sc to {{t}}; template fix <coat#19460915>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -29,12 +29,12 @@ From {{etyl|enm}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|
 
 ====Translations====
 {{trans-top|outer garment covering the upper torso and arms}}
-* Arabic: {{t+|ar|معطف|m|tr=mí`ṭaf}}
-* Armenian: {{t-|hy|վերարկու|tr=verarku}}
-* Bulgarian: {{t+|bg|сако|n}}, {{t+|bg|жакет|m}}
+* Arabic: {{t+|ar|معطف|m|tr=mí`ṭaf|sc=Arab}}
+* Armenian: {{t-|hy|վերարկու|tr=verarku|sc=Armn}}
+* Bulgarian: {{t+|bg|сако|n|sc=Cyrl}}, {{t+|bg|жакет|m|sc=Cyrl}}
 * Catalan: {{t+|ca|abric|m}}, {{t+|ca|casaca|f}}
 * Chinese:
-*: Mandarin: {{t|cmn|外衣|tr=wàiyī|sc=Hani}},  {{t-|cmn|大衣|tr=dàyī|sc=Hani}},  {{t|cmn|外套|tr=wàitào|sc=Hani}}
+*: Mandarin: {{t|cmn|外衣|tr=wàiyī|sc=Hani}}, {{t-|cmn|大衣|tr=dàyī|sc=Hani}}, {{t|cmn|外套|tr=wàitào|sc=Hani}}
 * Czech: {{t-|cs|kabát|m}}
 * Danish: {{t-|da|frakke|c}}
 * Dutch: {{t+|nl|mantel|m}}, {{t+|nl|jas|m}}
@@ -44,7 +44,7 @@ From {{etyl|enm}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|
 * French: {{t+|fr|manteau|m}}, {{t+|fr|paletot|m}}
 * Georgian: {{t-|ka|პალტო|sc=Geor}}, {{t-|ka|ქურქი|sc=Geor}}, {{t-|ka|პიჯაკი|sc=Geor}}, {{t-|ka|ქურთუკი|sc=Geor}}
 * German: {{t+|de|Mantel|m}}
-* Greek: {{t+|el|πανωφόρι|n|tr=panofóri}}, {{t+|el|παλτό|n|tr=paltó}}
+* Greek: {{t+|el|πανωφόρι|n|tr=panofóri|sc=Grek}}, {{t+|el|παλτό|n|tr=paltó|sc=Grek}}
 * Hebrew: {{t|he|מעיל|tr=m'íl|alt=מְעִיל|sc=Hebr}}
 * Hungarian: {{t+|hu|kabát}}
 * Icelandic: {{t+|is|jakki|m}}, {{t-|is|frakki|m}}
@@ -65,45 +65,45 @@ From {{etyl|enm}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|
 * Persian: {{t+|fa|پالتو|tr=pâlto|sc=fa-Arab}}
 * Polish: {{t+|pl|płaszcz|m}}
 * Portuguese: {{t+|pt|casaco|m}}
-* Russian: {{t+|ru|пальто|n|tr=pal’tó}} {{indeclinable}}, {{t+|ru|пиджак|m|tr=pidžák}} (''jacket'')
+* Russian: {{t+|ru|пальто|n|tr=pal’tó|sc=Cyrl}} {{indeclinable}}, {{t+|ru|пиджак|m|tr=pidžák|sc=Cyrl}} (''jacket'')
 * Scottish Gaelic: {{t-|gd|còta|m}}
 * {{trreq|sk}}
 * Slovene: {{t+|sl|plašč|m}}
 * Spanish: {{t+|es|abrigo|m}}, {{t+|es|saco|m}}, {{t+|es|casaca|f}}
 * Swahili: {{t+|sw|koti}}
 * Swedish: {{t+|sv|rock|c}}
-* Taos: [[kùti’ína]]
+* Taos: {{t|twf|kùti’ína}}
 * {{trreq|vo}}
 {{trans-bottom}}
 
 {{trans-top|covering of material, such as paint}}
-* Bulgarian: {{t-|bg|покритие|n}}
+* Bulgarian: {{t-|bg|покритие|n|sc=Cyrl}}
 * Catalan: {{t-|ca|cobertura|f}}
 * Danish: {{t-|da|lag|n}}
 * Dutch: {{t+|nl|laag|f}}
 * Finnish: {{t+|fi|pinta}}, {{t+|fi|pinnoite}}
 * French: {{t+|fr|couche|f}}
-* German: [[Beschichtung]] {{f}}
-* Greek: {{t+|el|επικάλυμμα|n|tr=epikálymma}}, {{qualifier|paint}} {{t+|el|στρώση|f|tr=strósi}}, {{t+|el|επίχρισμα|n|tr=epíchrisma}}
+* German: {{t|de|Beschichtung|f}}
+* Greek: {{t+|el|επικάλυμμα|n|tr=epikálymma|sc=Grek}}, {{qualifier|paint}} {{t+|el|στρώση|f|tr=strósi|sc=Grek}}, {{t+|el|επίχρισμα|n|tr=epíchrisma|sc=Grek}}
 * Irish: {{t-|ga|brat|m}}, {{t-|ga|cóta|m}}
 {{trans-mid}}
 * Italian: {{t+|it|rivestimento|m}}
-* Japanese: [[塗装]] ([[とそう]], tosō), [[コーティング]] (kōtyingu)
+* Japanese: {{t|ja|塗装|tr=[[とそう]], tosō|sc=Jpan}}, {{t|ja|コーティング|tr=kōtyingu|sc=Jpan}}
 * Macedonian: {{t-|mk|слој|m|tr=sloj|sc=Cyrl}}
 * Malay: {{t-|ms|lapisan}}
 * Polish: {{t+|pl|warstwa|f}}
 * Portuguese: {{t+|pt|cobertura|f}}
-* Russian: {{t+|ru|слой|m|tr=sloj}}
+* Russian: {{t+|ru|слой|m|tr=sloj|sc=Cyrl}}
 * Spanish: {{t+|es|cubierta|f}}
 * Swahili: {{t+|sw|koti}}
 * Swedish: {{t+|sv|lager}}, {{t-|sv|täcklager}}, {{t+|sv|hölje}}, {{t+|sv|täcke}}
 {{trans-bottom}}
 
 {{trans-top|fur or feathers}}
-* Danish: {{t+|da|pels|c}} (fur), {{t-|da|fjerdragt}} {{t-|da|c}} (feathers)
-* Finnish: [[turkki]] (fur), [[höyhenpuku]] (feathers)
-* Greek: {{t+|el|τρίχωμα|n|tr=tríchoma}}, {{t+|el|γούνα|f|tr=goúna}}, {{qualifier|feathers}} {{t+|el|φτέρωμα|n|tr=ftéroma|sc=Grek}}
-* Japanese: [[毛皮]]([[けがわ]], kegawa), [[羽毛]]([[うもう]], umō)
+* Danish: {{t+|da|pels|c}} {{qualifier|fur}}, {{t-|da|fjerdragt|c}} {{qualifier|feathers}}
+* Finnish: {{t|fi|turkki}} {{qualifier|fur}}, {{t|fi|höyhenpuku}} {{qualifier|feathers}}
+* Greek: {{t+|el|τρίχωμα|n|tr=tríchoma|sc=Grek}}, {{t+|el|γούνα|f|tr=goúna|sc=Grek}}, {{qualifier|feathers}} {{t+|el|φτέρωμα|n|tr=ftéroma|sc=Grek}}
+* Japanese: {{t|ja|毛皮|tr=[[けがわ]], kegawa|sc=Jpan}}, {{t|ja|羽毛|tr=[[うもう]], umō|sc=Jpan}}
 * Latin: {{t-|la|pellis|f}}
 {{trans-mid}}
 * Macedonian: {{t-|mk|крзно|n|tr=k'rzno|sc=Cyrl}} {{qualifier|fur}}, {{t-|mk|пердуви|m|tr=pérduvi|sc=Cyrl}} {{qualifier|feathers}}
@@ -120,7 +120,7 @@ From {{etyl|enm}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|ro}}: [[haină]] {{f}}, [[manta]] {{f}}
+* {{ttbc|ro}}: {{t|ro|haină|f}}, {{t|ro|manta|f}}
 {{trans-bottom}}
 
 ===Verb===
@@ -132,17 +132,17 @@ From {{etyl|enm}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|
 
 ====Translations====
 {{trans-top|to cover with a coat of some material}}
-* Bulgarian: {{t+|bg|намазвам}},  {{t+|bg|покривам}}
-* Dutch: [[bekleden]], [[coaten]]
+* Bulgarian: {{t+|bg|намазвам|sc=Cyrl}}, {{t+|bg|покривам|sc=Cyrl}}
+* Dutch: {{t|nl|bekleden}}, {{t|nl|coaten}}
 * Finnish: {{t-|fi|päällystää}}
 * French: {{t+|fr|couvrir}}
-* German: [[beschichten]]
-* Greek: {{t+|el|σκεπάζω|tr=skepázo}}
+* German: {{t|de|beschichten}}
+* Greek: {{t+|el|σκεπάζω|tr=skepázo|sc=Grek}}
 * Italian: {{t-|it|rivestire}}
 {{trans-mid}}
 * Macedonian: {{t-|mk|обложува|tr=oblóžuva|sc=Cyrl}}, {{t-|mk|покрива|tr=pókriva|sc=Cyrl}}
-* Polish: [[pokrywać]] / [[pokryć]]
-* Russian: [[покрывать]] (pokryvát’)
+* Polish: {{t|pl|pokrywać}}, {{t|pl|pokryć}}
+* Russian: {{t|ru|покрывать|tr=pokryvát’|sc=Cyrl}}
 * Spanish: {{t+|es|cubrir}}
 * Swahili: {{t+|sw|koti}}
 * Swedish: {{t+|sv|täcka}}, {{t+|sv|belägga}}
@@ -150,7 +150,7 @@ From {{etyl|enm}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|
 
 {{trans-top|to cover as a coat}}
 * Finnish: {{t+|fi|peittää}}
-* Greek: {{{t+|el|καλύπτω|tr=kalýpto|sc=Grek}}
+* Greek: {{t+|el|καλύπτω|tr=kalýpto|sc=Grek}}
 {{trans-mid}}
 * Swahili: {{t+|sw|koti}}
 * Swedish: {{t+|sv|täcka}}
