t+pal:[[𐭦𐭩𐭲𐭩]] t+tg:[[зайтун]] ([[WT:EDIT|Assisted]]) <olive#19461481>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -88,6 +88,7 @@
 * Malay: {{t-|ms|zaitun}}
 * {{trreq|ml}}
 * Maltese: {{t-|mt|żebbuġa|f}}
+* Middle Persian: {{tø|pal|𐭦𐭩𐭲𐭩|tr=zayt|sc=Phli}}
 * Norwegian: {{t-|no|oliven}}
 * Occitan: {{t+|oc|oliva|f}}
 * Persian: {{t+|fa|زیتون}}
@@ -105,7 +106,7 @@
 * Slovene: {{t+|sl|oljka|f}} (1), {{t+|sl|oliva|f}} (2)
 * Spanish: {{t+|es|aceituna|f}}, {{t+|es|oliva|f}}
 * Swedish: {{t+|sv|oliv|c}}
-* {{trreq|tg}}
+* Tajik: {{t|tg|зайтун|tr=zaytun|sc=Cyrl}}
 * Turkish: {{t+|tr|zeytin}}
 * {{trreq|tk}}
 * {{trreq|uk}}
