--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -37,6 +37,10 @@ One possibility is that 早 is a pictograph of [[sun]] (日) over the [[horizon]
 ====Readings====
 * {{ja-readings|on=[[そう]] (sō), [[さつ]] (satsu)|kun=[[はやい]] (hayai), [[はや]] (haya), [[さ]] (sa)}}
 
+===Noun===
+{{ja-noun|k|hira=はや|rom=haya}}
+# already; now
+
 ----
 
 ==Korean==
