t+gl:[[falar]] ([[WT:EDIT|Assisted]]) <speak#19466004>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -102,6 +102,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Estonian: {{t-|et|rääkima}}
 * Finnish: {{t+|fi|puhua}}
 * French: {{t+|fr|parler}}
+* Galician: {{t|gl|falar}}
 * Georgian: {{t-|ka|ლაპარაკი|tr=laparaki|sc=Geor}}
 * German: {{t+|de|sprechen}}, {{t+|de|reden}}
 * Greek: {{t+|el|μιλώ|tr=miló}}, {{t+|el|λέω|tr=léo}}
