--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -244,6 +244,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 {{trans-top|jargon/terminology}}
 * French: {{t+|fr|jargon|m}}
 {{trans-mid}}
+* Galician: {{t|gl|xerga|f}}
 * Italian: {{t+|it|gergo|m}}
 {{trans-bottom}}
 
