/* Etymology */ {{Han compound}} <坐#19468201>

--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Etymology===
-The character depicts two people ([[人]]) sitting on the ground ([[土]]).<ref>http://www.yellowbridge.com/chinese/character-etymology.php?searchChinese=1&zi=%E5%9D%90#</ref>
+{{Han compound|从|t1=two people|土|t2=ground|ls=ic}} = two people sitting on the ground.<ref>http://www.yellowbridge.com/chinese/character-etymology.php?searchChinese=1&zi=%E5%9D%90#</ref>
 
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=8810<sub>4</sub>|canj=人人土 (OOG)}}
