--- a/en/愼/愼.15695.wikitext
+++ b/en/愼/愼.15695.wikitext
@@ -4,7 +4,7 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心心月金 (PPBC)}}
 
-# act with care, be cautious
+# [[act]] with [[care]], be [[cautious]]
 
 ====References====
 * {{Han ref|kx=0396.470|dkj=11024|dj=0735.340|hdz=42338.071|uh=613C|ud=24892}}
