--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -12,7 +12,7 @@
 * {{rhymes|ɪdʒ}}
 
 ===Etymology 1===
-From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|brycġ|bridge|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|brugjō|lang=gem-pro}}, {{recons|brugjōn||bridge|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|bʰerw-|lang=ine-pro}}, {{recons|bʰrēw-||wooden flooring, decking, bridge|lang=ine-pro}}. Cognate with {{etyl|sco|-}} {{term|brig|lang=sco}}, {{term|brigg|lang=sco}}, {{term|breeg||bridge|lang=sco}}, {{etyl|stq|-}} {{term|Brääch||bridge|lang=stq}}, West Frisian {{term|brêge||bridge|lang=fy}}, Dutch {{term|brug||bridge|lang=nl}}, German {{term|Brücke||bridge|lang=de}}, {{etyl|da|-}} {{term|bro||bridge|lang=da}} and {{term|brygge||wharf|lang=da}}, {{etyl|is|-}} {{term|brú||bridge|lang=is}} and {{term|brygga||pier|lang=is}}, Gaulish {{term||bríva|bridge}}, Old Church Slavonic {{term||brŭvŭno|beam}} and {{term||brivno|log}}.
+From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|brycġ|bridge|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|brugjō|lang=gem-pro}}, {{recons|brugjōn||bridge|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|bʰerw-|lang=ine-pro}}, {{recons|bʰrēw-||wooden flooring, decking, bridge|lang=ine-pro}}. Cognate with {{etyl|sco|-}} {{term|brig|lang=sco}}, {{term|brigg|lang=sco}}, {{term|breeg||bridge|lang=sco}}, {{etyl|stq|-}} {{term|Brääch||bridge|lang=stq}}, West Frisian {{term|brêge||bridge|lang=fy}}, Dutch {{term|brug||bridge|lang=nl}}, German {{term|Brücke||bridge|lang=de}}, {{etyl|da|-}} {{term|bro||bridge|lang=da}} and {{term|brygge||wharf|lang=da}}, {{etyl|is|-}} {{term|brú||bridge|lang=is}} and {{term|brygga||pier|lang=is}}, Gaulish {{term||bríva|bridge}}, Old Church Slavonic {{term|бръвъно|tr=brŭvŭno||beam|lang=cu}} and Russian {{term|бревно|tr=brevnó||log|lang=ru}}.
 
 ====Noun====
 [[Image:48 - Mende - Pont Notre-Dame.jpg|thumb|A bridge (sense 1)]][[Image:Violin_bridge.jpg|thumb|right|The bridge of a violin]]
