--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -35,7 +35,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * See also [[Wikisaurus:beautiful]]
 
 ====Antonyms====
-* {{sense|possessing charm and attractive}} [[grotesque]], [[hideous]], [[homely]], [[plain]], [[misshapen]], [[repulsive]], [[ugly]]
+* {{sense|possessing charm and attractive}} [[grotesque]], [[hideous]], [[homely]], [[plain]], [[misshapen]], [[repulsive]], [[ugly]]; [[unbeautiful]]
 * {{sense|of the weather}} [[bad]], [[cloudy]], [[dull]], [[miserable]], [[overcast]], [[rainy]], [[wet]]
 * {{sense|well executed}} [[average]], [[bad]], [[mediocre]], [[poor]], [[shoddy]], [[substandard]], [[terrible]], [[weak]]
 
