--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -51,6 +51,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Finnish: {{t+|fi|oksa}}
 * French: {{t+|fr|branche|f}}, {{t+|fr|rameau|m}}
 * Friulian: {{tø|fur|ram|m}}
+* Galician: {{t|gl|póla|f}}
 * Georgian: {{t-|ka|შტო|tr=što|sc=Geor}}
 * German: {{t+|de|Ast|m}}, {{t+|de|Zweig|m}}
 * Greek: {{t+|el|κλαδί|n|tr=kladí|sc=Grek}}, {{t+|el|κλαρί|n|tr=klarí|sc=Grek}}
