--- a/en/倱/倱.11061.wikitext
+++ b/en/倱/倱.11061.wikitext
@@ -7,14 +7,13 @@
 # (used in 倱伅, a variant of [[混沌]]) a [[worthless]] [[son]] of the [[w:Yellow Emperor|Yellow Emperor]], one of the [[mythical]] Sixiong (四凶) or "Four Fiends" later [[banish]]ed by [[w:Shun (Chinese leader)|Emperor Shun]]
 # a "legendary [[faceless]] [[being]]" in Chinese [[mythology]] and the "[[primordial]] and [[central]] [[chaos]]" in Chinese [[cosmogony]]
 
-===Usage notes===
+====Usage notes====
 Used with [[伅]] as component of [[倱伅]].
 
 ===See also===
 * [[w:Hundun|Hundun]] (Wikipedia)
 
-====References====
-{{rfc-level|References at L4+ not in L3 POS section|lang=mul}}
+===References===
 * {{Han ref|kx=0109.100|dkj=00800|dj=0232.080|hdz=10177.040|uh=5031|ud=20529|bh=D0DC|bd=53468}}
 
 ----
