--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -217,6 +217,18 @@
 
 ----
 
+==Min Nan==
+
+===Hanzi===
+{{nan-hanzi|poj=(''Taiwanese'') [[tè]], [[tuē]], [[tī]]}}
+
+# {{defn|lang=nan|sort=土03}}
+
+====References====
+*[http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=2278&curpage=3&sample=%E5%9C%B0&radiobutton=1&querytarget=1&limit=20&pagenum=6&rowcount=105 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
+
+----
+
 ==Vietnamese==
 
 ===Han character===
