--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -137,6 +137,7 @@
 {{trans-bottom}}
 {{trans-top|colloquial: term of general disparagement}}
 * Bulgarian: {{t+|bg|духам|tr=dukham}}
+* Esperanto: {{t|eo|aĉi}}
 * Finnish: {{t+|fi|haista}}, {{t-|fi|olla syvältä}}
 * French: {{t-|fr|être chiant}}
 * German: {{t-|de|mies sein}}, {{t-|de|zum Kotzen sein}}, {{t-|de|Scheiße sein}}
