/* Derived terms */ arrange in drop-down box <blond#19483579>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -133,16 +133,18 @@ Alternate etymology connects {{etyl|frk|-}} {{recons|blund|lang=frk}} to {{etyl|
 {{checktrans-bottom}}
 
 ===Derived terms===
-* [[ash blond]], [[ash blonde]], [[ash-blond]], [[ash-blonde]]
-* [[bottle blond]], [[bottle blonde]], [[bottle-blond]], [[bottle-blonde]]
-* [[dirty blond]], [[dirty blonde]], [[dirty-blond]], [[dirty-blonde]]
-* [[dishwater blond]], [[dishwater blonde]], [[dishwater-blond]], [[dishwater-blonde]]
-* [[dumb blond]], [[dumb blonde]], [[dumb-blond]], [[dumb-blonde]]
-* [[peroxide blond]], [[peroxide blonde]], [[peroxide-blond]], [[peroxide-blonde]]
-* [[platinum blond]], [[platinum blonde]], [[platinum-blond]], [[platinum-blonde]]
-* [[strawberry blond]], [[strawberry blonde]], [[strawberry-blond]], [[strawberry-blonde]]
-* [[white blond]], [[white blonde]], [[white-blond]], [[white-blonde]]
-<!-- Removed 'natural blond' et al. and 'very blond' et al., but this needs further cleanup (preferably a single hyperlink for each) -Coreydragon -->
+{{rel-top|terms derived from ''blond''}}
+* [[ash blond]]/[[ash blonde]]
+* [[bottle blond]]/[[bottle blonde]]
+* [[dirty blond]]/[[dirty blonde]]
+* [[dishwater blond]]/[[dishwater blonde]]
+* [[dumb blond]]/[[dumb blonde]]
+{{rel-mid}}
+* [[peroxide blond]]/[[peroxide blonde]]
+* [[platinum blond]]/[[platinum blonde]]
+* [[strawberry blond]]/[[strawberry blonde]]
+* [[white blond]]/[[white blonde]]
+{{rel-bottom}}
 
 ===See also===
 * [[towhead]], [[towheaded]]
