--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -145,6 +145,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Polish: {{t+|pl|mówić}}
 * Portuguese: {{t+|pt|falar}}
 * Punjabi: {{t-|pa|ਬੋਲਣਾ|sc=Guru}}
+* Quechua: {{t|qu|rimay}}
 * Romanian: {{t+|ro|vorbi}}, {{t+|ro|discuta}}
 * Romansch: [[pledar]], [[tschantschar]]
 * Russian: {{t+|ru|говорить|tr=govorít’}} {{impf}}, {{t+|ru|разговаривать|tr=razgovárivat’}} {{impf}}
