--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -116,6 +116,7 @@ First attested in {{etyl|enm}}, probably from {{etyl|gd}} {{term|stob||to prick,
 * Lithuanian: {{t-|lt|badyti}}
 * Norwegian: {{t+|no|stikke}}
 * Portuguese: {{t+|pt|apunhalar}}, {{t-|pt|esfaquear}}
+* Quechua: {{t|qu|t'urpuy}}
 * Rapa Nui: {{tø|rap|oka}}
 * Romanian: {{t-|ro|înjunghia}}, {{t+|ro|străpunge}}, {{t-|ro|a da o lovitură de cuțit}}
 * Romansch: {{t-|rm|stilettar}}, {{t-|rm|cuntellar}}
