t+qu:[[tariy]] ([[WT:EDIT|Assisted]]) <find#19517346>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -93,6 +93,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|fi
 * Persian: {{t+|fa|یافتن|tr=yâftan}}, {{t+|fa|پیدا کردن|tr=peydâ kardan|sc=fa-Arab}}
 * Polish: {{t+|pl|znajdować}}
 * Portuguese: {{t+|pt|achar}}, {{t+|pt|encontrar}}
+* Quechua: {{t|qu|tariy}}
 * Romanian: {{t+|ro|găsi}}
 * Russian: {{t+|ru|находить|tr=naxodít’}} {{impf}}, {{t+|ru|найти|tr=najtí}} {{pf.}}
 * Scots: {{tø|sco|fin}}
