--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -55,7 +55,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Bengali: {{t-|bn|পাকস্থলী|tr=pakôsthôli|sc=Beng}}
 * Breton: {{t+|br|stomog|m}}
 * Bulgarian: {{t+|bg|стомах|m|tr=stomáh|sc=Cyrl}}
-* Burmese: {{t+|my|ဗိုက်|tr=baik|sc=Mymr}}
+* Burmese: {{t|my|ဝမ်း|tr=wun:}}
 * Catalan: {{t+|ca|estómac|m}}
 * Chamicuro: {{tø|ccc|knani}}
 * {{trreq|ny}}
@@ -179,6 +179,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Belarusian: {{t-|be|жывот|m|tr=žyvót|sc=Cyrl}}, {{t-|be|чэрава|n|tr=čérava|sc=Cyrl}}
 * Bengali: {{t-|bn|পেট|tr=peţ|sc=Beng}}
 * Bulgarian: {{t+|bg|корем|m|tr=korém|sc=Cyrl}}, {{t+|bg|шкембе|tr=škembe}}
+* Burmese: {{t+|my|ဗိုက်|tr=baik}}
 * Chinese:
 *: Mandarin: {{t|cmn|腹部|tr=fùbù|sc=Hani}}, {{t-|cmn|肚子|tr=dùzi|sc=Hani}}
 * Czech: {{t+|cs|břicho|n}}
