/* English */ split ety. ety 2: Compare {{etyl|sco|-}} {{term|came|lang=sco||comb}}, {{term|caim|lang=sco||comb}}, and {{etyl|enm|-}} {{term|camet|lang=enm||silver}}. <came#19553416>

--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -7,18 +7,15 @@
 * {{audio|en-us-came.ogg|Audio (US)}}
 * {{rhymes|eɪm}}
 
-===Noun===
-{{en-noun}}
+===Etymology 1===
 
-# A grooved strip of lead used to hold panes of glass together.
-
-===Verb===
+====Verb====
 '''came'''
 
 # {{simple past of|come}}
 # {{simple past of|cum}}
 
-====Translations====
+=====Translations=====
 {{trans-top|simple past of come}}
 * Arabic: {{t-|ar|جاء|m|tr=dʒa'|sc=Arab}}, {{t+|ar|اتى|m|tr=ata|sc=Arab}}
 *: Egyptian Arabic: {{tø|arz|جيه|m|tr=ge|sc=Arab}}
@@ -32,6 +29,14 @@
 {{trans-mid}}
 * Macedonian: {{t-|mk|сврши|tr=sv'rši|sc=Cyrl}}
 {{trans-bottom}}
+
+===Etymology 2===
+Compare {{etyl|sco|-}} {{term|came|lang=sco||comb}}, {{term|caim|lang=sco||comb}}, and {{etyl|enm|-}} {{term|camet|lang=enm||silver}}.
+
+====Noun====
+{{en-noun}}
+
+# A grooved strip of lead used to hold panes of glass together.
 
 ===Statistics===
 * {{rank|those|own|old|106|came|men|come|without}}
