/* Pronunciation */ correct pronun <vomit#19555673>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -6,9 +6,9 @@
 From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vomitāre|lang=la}}, present active infinitive of {{term|vomito|vomitō|vomit repeatedly|lang=la}}, frequentative form of {{term|vomo|vomō|be sick, vomit|lang=la}}, from {{etyl|ine-pro|en}} {{recons|wem-||to spew, vomit|lang=ine-pro}}. Cognate with {{etyl|non|-}} {{term|váma||nausea, malaise|lang=non}}, {{etyl|ang|-}} {{term|wemman||to defile|lang=ang}}. More at {{l|en|wem}}.
 
 ===Pronunciation===
-* {{a|UK}} {{enPR|vŏm'ət}}, {{IPA|/ˈvɒmət/}}, {{X-SAMPA|/"vQm@t/}}
+* {{a|UK}} {{enPR|vŏm'it}}, {{IPA|/ˈvɒmɪt/}}
 * {{rhymes|ɒmɪt}}
-* {{a|US}} {{enPR|vŏm'ît}}, {{IPA|/ˈvɑmɨt/}}
+* {{a|US}} {{enPR|vŏm'it}}, {{IPA|/ˈvɑmɪt/}}
 * {{audio|En-us-vomit.ogg|audio (US)}}
 
 ===Verb===
