--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -128,6 +128,7 @@
 * Thai: {{t-|th|ดูด|sc=Thai}} (dūd)
 * Turkish: {{t+|tr|emmek}}
 * Ukrainian: {{t-|uk|смоктати|tr=smoktáty}}, {{t-|uk|ссати|tr=ssáty}}
+* Vietnamese: {{t|vi|bú}}
 * Zulu: {{t-|zu|ncela|alt=-ncela}}, {{t-|zu|munca|alt=-munca}}, {{t-|zu|munya|alt=-munya}}
 {{trans-bottom}}
 {{trans-top|to work the lips and tongue on}}
