--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -77,7 +77,7 @@
 #*: Some of my friends - gay and '''straight''' - seem unable to understand the close but platonic nature of my and Gian's relationship, but have been supportive.
 #* '''2011''', Jodi Picoult, ''Sing You Home'', p. 273:
 #*: Angela smiles. ‘I'm '''straight''', Zoe, and I'm happily married.’
-# {{colloquial|slang|pejorative}} {{non-gloss definition|Used to express dislike}}: [[Boring]], unimaginative, [[inferior]]. {{defdate|from 20th c.}}
+# {{colloquial|slang|pejorative}} {{non-gloss definition|Used to express dislike}}: [[boredom|Boring]], unimaginative, [[inferior]]. {{defdate|from 20th c.}}
 #* Wavy Gravy.
 #*: ‘Sure, I could of done it different... put my clown in a closet and dressed up in '''straight''' clothing. I could of compromised my essence, and swallowed my soul.’
 #* '''1989''', Gus Van Sant, ''Drugstore Cowboy''.
