--- a/en/c/chosen.6834.wikitext
+++ b/en/c/chosen.6834.wikitext
@@ -12,6 +12,9 @@
 
 # {{past participle of|choose}}
 
+====Derived terms====
+* [[chosenness]]
+
 [[Category:English irregular past participles]]
 
 [[ang:chosen]]
