--- a/en/値/値.11033.wikitext
+++ b/en/値/値.11033.wikitext
@@ -2,9 +2,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人十月女 (OJBV), X人十月女 (XOJBV)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人十月女 (OJBV), X人十月女 (XOJBV)|ids=⿰[[亻]][[直]]}}
 
-# price, cost, worth
+# [[price]], [[cost]], [[worth]]
 
 ====References====
 * {{Han ref|kx=0108.150|dkj=00786|dj=0231.050|hdz=10171.081|uh=5024|ud=20516}}
