--- a/en/倥/倥.11034.wikitext
+++ b/en/倥/倥.11034.wikitext
@@ -1,10 +1,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=2321<sub>1</sub>|canj=人十金一 (OJCM)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=2321<sub>1</sub>|canj=人十金一 (OJCM)|ids=⿰[[亻]][[空]]}}
 
-# boorish, ignorant
-# urgent, pressing
+# [[boorish]], [[ignorant]]
+# [[urgent]], [[pressing]]
 
 ====References====
 * {{Han ref|kx=0108.160|dkj=00787|dj=0231.060|hdz=10184.050|uh=5025|ud=20517|bh=ADC3|bd=44483}}
