/* Translingual */ added "ids=" ⿰亻宗 (composition) data to /Han char/ template <倧#19570202>

--- a/en/倧/倧.11038.wikitext
+++ b/en/倧/倧.11038.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=1329<sub>1</sub>|canj=人十一火 (OJMF)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=1329<sub>1</sub>|canj=人十一火 (OJMF)|ids=⿰[[亻]][[宗]]}}
 
 # {{defn|Han|sort=人08}}
 
