--- a/en/倨/倨.11040.wikitext
+++ b/en/倨/倨.11040.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=2726<sub>4</sub>|canj=人尸十口 (OSJR)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=2726<sub>4</sub>|canj=人尸十口 (OSJR)|ids=⿰[[亻]][[居]]}}
 
 # [[arrogant]], [[haughty]], [[rude]]
 
