/* Translingual */ wikilinked all three words/terms in definition entries; added "ids=" ⿰亻青 (composition) data to /Han char/ template <倩#19570316>

--- a/en/倩/倩.11043.wikitext
+++ b/en/倩/倩.11043.wikitext
@@ -1,10 +1,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=2522<sub>7</sub>|canj=人手一月 (OQMB)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=2522<sub>7</sub>|canj=人手一月 (OQMB)|ids=⿰[[亻]][[青]]}}
 
-# beautiful, lovely
-# son-in-law
+# [[beautiful]], [[lovely]]
+# [[son-in-law]]
 
 ====References====
 * {{Han ref|kx=0109.010|dkj=00791|dj=0231.100|hdz=10170.010|uh=5029|ud=20521|bh=ADC5|bd=44485}}
