added "Vietnamese" section with /vi-hantu/ and /defn|lang=vi|sort=人08/ templates <倩#19570326>

--- a/en/倩/倩.11043.wikitext
+++ b/en/倩/倩.11043.wikitext
@@ -57,6 +57,15 @@
 
 # (''Teochew'') please, excusing oneself. Example: 倩食 (cia'2 ziah8) is a very polite way of asking people to eat.
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|[[thiến]]|rs=人08}}
+
+# {{defn|lang=vi|sort=人08}}
+
 [[zh-min-nan:倩]]
 [[fr:倩]]
 [[li:倩]]
