/* Translingual */ added "ids=" ⿰亻兒 (composition) data to /Han char/ template <倪#19570341>

--- a/en/倪/倪.11045.wikitext
+++ b/en/倪/倪.11045.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=2721<sub>7</sub>|canj=人竹X山 (OHXU)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=2721<sub>7</sub>|canj=人竹X山 (OHXU)|ids=⿰[[亻]][[兒]]}}
 
 # [[feeble]], [[tiny]], [[young]] and [[weak]]
 # a [[Chinese]] [[surname]]
