--- a/en/倬/倬.11050.wikitext
+++ b/en/倬/倬.11050.wikitext
@@ -14,7 +14,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=cheuk3}}
+{{yue-hanzi|jyut=[[coek3]]|y=cheuk3}}
 
 # {{defn|lang=yue|sort=人08}}
 
