--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -4,8 +4,10 @@
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2224<sub>4</sub>|canj=人竹木女 (OHDV)}}
 <!-- Order Changed,  -->
 
+# [[dwarf]]
+# [[dwarfish]], [[short]]
 # [[docile]]<!-- See talk and http://www.kangxizidian.com/kangxi/0109.gif -->
-<!-- Please show the example  to ferret out a reasonable explanation in literature　and history books -->
+<!-- Please show the example to ferret out a reasonable explanation in literature　and history books -->
 # {{historical|lang=mul}} [[Japan]]
 # {{historical|lang=mul}} [[Japanese]]
 
