--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=2224<sub>4</sub>|canj=人竹木女 (OHDV)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=2224<sub>4</sub>|canj=人竹木女 (OHDV)|ids=⿰[[亻]][[委]]}}
 <!-- Order Changed,  -->
 
 # [[dwarf]]
