--- a/en/倮/倮.11054.wikitext
+++ b/en/倮/倮.11054.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人田木 (OWD)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人田木 (OWD)|ids=⿰[[亻]][[果]]}}
 
-# bare, naked, uncovered
+# [[bare]], [[naked]], [[uncovered]]
 
 ====References====
 * {{Han ref|kx=0109.070|dkj=00797|dj=0232.050|hdz=10177.030|uh=502E|ud=20526}}
