/* Translingual */ added "ids=" ⿰亻松 (composition) data to /Han char/ template <倯#19570671>

--- a/en/倯/倯.11056.wikitext
+++ b/en/倯/倯.11056.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=2823<sub>2</sub>|canj=人木金戈 (ODCI)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=2823<sub>2</sub>|canj=人木金戈 (ODCI)|ids=⿰[[亻]][[松]]}}
 
 # {{defn|Han|sort=人08}}
 
