/* Translingual */ added "ids=" ⿰亻夌 (composition) data to /Han char/ template <倰#19570711>

--- a/en/倰/倰.11058.wikitext
+++ b/en/倰/倰.11058.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=2424<sub>7</sub>|canj=人土金水 (OGCE)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=2424<sub>7</sub>|canj=人土金水 (OGCE)|ids=⿰[[亻]][[夌]]}}
 
 # {{defn|Han|sort=人08}}
 
