--- a/en/倲/倲.11064.wikitext
+++ b/en/倲/倲.11064.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人木田 (ODW)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人木田 (ODW)|ids=⿰[[亻]][[東]]}}
 
 # {{defn|Han|sort=人08}}
 
