--- a/en/倳/倳.11066.wikitext
+++ b/en/倳/倳.11066.wikitext
@@ -3,7 +3,8 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2520<sub>7</sub>|canj=人十中弓 (OJLN)}}
 
-# {{defn|Han|sort=人08}}
+# [[stick]] in, [[stab]]
+# to [[erect]]
 
 ====References====
 * {{Han ref|kx=0109.120|dkj=00802|dj=0232.100|hdz=10172.050|uh=5033|ud=20531|bh=D0D1|bd=53457}}
